# HSA-Testing

./: CMakeLists.txt  readme.md
inc/: amat_init.h
src/: amat_init.cpp
